--- a/index.html
+++ b/index.html
@@ -10,35 +10,34 @@
 <body>
      <div class="calculator">
         <input type="text" id="input" >
-        <!-- <p id="input"></p> -->
-        <div class="calc-row-bitton">
+        <div class="calc-row-button">
             <button class="button" id="Delete">Del</button>
             <button class="button">AC</button>
             <button class="button">+/-</button>
-            <button class="button">%</button>
+            <button class="button">/</button>
         </div>
-        <div class="calc-row-bitton">
+        <div class="calc-row-button">
             <button class="button" >7</button>
             <button class="button" >8</button>
             <button class="button" >9</button>
             <button class="button" >*</button>
         </div>
-        <div class="calc-row-bitton">
-            <button class="button">4 </button>
+        <div class="calc-row-button">
+            <button class="button">4</button>
             <button class="button">5</button>
             <button class="button">6</button>
             <button class="button">-</button>
         </div>
-        <div class="calc-row-bitton">
+        <div class="calc-row-button">
             <button class="button">1</button>
             <button class="button">2</button>
             <button class="button">3</button>
             <button class="button">+</button>
         </div>
-         <div class="calc-row-bitton">
-            <button class="button">0 </button>
+         <div class="calc-row-button">
+            <button class="button">0</button>
+            <button class="button">00</button>
             <button class="button">.</button>
-            <button class="button">/</button>
             <button class="button">=</button>
         </div>
 
